Fix shake movment on mobile devices

--- a/source/components/hero/stylesheet/_components.hero.scss
+++ b/source/components/hero/stylesheet/_components.hero.scss
@@ -27,8 +27,8 @@ body {
   color: #000000;
   position: relative;
   width: 100px;
-  height: 100px;
-  z-index: 100;
+  height: 50px;
+  z-index: 50;
   top: 36px;
   opacity: 0;
   svg {
@@ -46,12 +46,11 @@ body {
 }
 
 .right__icon {
-  // color: #000000;
   position: relative;
   width: 100px;
-  height: 100px;
-  z-index: 100;
-  top: 36px;
+  height: 50px;
+  z-index: 50;
+  top: -105px;
   left: 82%;
   opacity: 1;
   svg {
@@ -111,6 +110,10 @@ body {
   position: relative;
   max-height: 100vh;
   overflow: hidden;
+
+  #modal-custom {
+    transform: translate(0px, 0px);
+  }
 
   .modal--is-showing {
     opacity: 1;
@@ -718,6 +721,15 @@ main#content {
         left: 117px;
         z-index: 11;
         margin-bottom: $global-spacing-sm;
+      }
+
+      .modal__container {
+        .left__icon {
+          left: -20px;
+        }
+        .right__icon {
+          left: 76%;
+        }
       }
 
       .show-msg,
